# ultrix11-src

./: .gitignore  AGENTS.md  CMakeLists.txt  COPYRIGHT  Makefile  PROJECT_STATUS.md  README.md  setup.sh
arch/: README.md  pdp11.md
docs/: Doxyfile  README.md  documentation_tracking.md  pdp11-lab.md
docs/sphinx/: arch_x86_64_v1.rst  build_steps.rst  build_workflow.rst  conf.py  emulator_lab.rst  emulator_setup.rst  index.rst  libc_dir.rst  overview.rst  repository_overview.rst  usage.rst
docs/sphinx/_static/: custom.css
scripts/: analyze_locks.py  build.sh  build_flags.mk  setup_lab.sh
src/: CMakeLists.txt  makefile
src/cmd/: ac.c  accton.c  ar.c  arcv.c  at.c  atrun.c  badstat.c  basename.c  bfs.c  bufstat.c  cal.c  cat.c  catman.c  cb.c  cc.c  checkeq.c  chgrp.c  chmod.c  chog.c  chown.c  chroot.c  clear.c  clri.c  cmp.c  col.c
src/cmd/lprsetup/: printlib.c
src/libU77/: access_.c
src/libc/dir/: closedir.c  opendir.c  readdir.c  seekdir.c  telldir.c
src/libc/stdio/: fprintf.c  fputc.c  fwrite.c  gcvt.c  getgrent.c  getpw.c  getpwent.c  getw.c  popen.c  putchar.c  rew.c  setvbuf.c  ungetc.c  vprintf.c  vsprintf.c
src/libcurses/: addch.c  addstr.c  box.c  clear.c  clrtobot.c  clrtoeol.c  curtest.c  delch.c  deleteln.c  delwin.c  endwin.c  erase.c  insertln.c  move.c  overlay.c  show.c
src/libjobs/: getwd.c
sys/: CMakeLists.txt  Makefile
sys/arch/x86_64_v1/: Makefile  asm.h  boot.s  interrupts.s  stub.c
sys/net/: if.c  if_uba.c
